# gb-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: cpu.rs  lib.rs  libretro.rs  main.rs
src/cartridge/: cam-from-rgb.rs  mod.rs  models.rs  rtc.rs
src/cpu/: instructions.rs  mod.rs
src/gpu/: mod.rs  sprite.rs
src/io/: bootrom.rs  buttons.rs  mod.rs  ram.rs  regs.rs  rom.rs  timer.rs
src/resampler/: fifo.rs  mod.rs  worker.rs
src/spu/: envelope.rs  lfsr_wave.rs  mod.rs  ram_wave.rs  rectangle_wave.rs
src/ui/: mod.rs  sdl2.rs
src/ui/sdl2/: audio.rs  controller.rs  display.rs  mod.rs  opengl.rs
