[package]

name = "gb-rs"
version = "0.0.1"
authors = ["Lionel Flandrin <lionel@svkt.org>"]

keywords = ["emulator", "gameboy"]

readme = "README.md"

description = "GameBoy emulator"

license = "MIT"

[features]

# Select the Super Gameboy bootrom instead of the classic one. It
# doesn't have the scrolling logo and starts up faster. None of the
# SGB-specific features will be handled but that shouldn't cause any
# compatibility issues besides the fact that it will accept to run
# ROMs with invalid headers unlike the original bootrom.
sgb_bootrom = []

[dependencies]

ascii = "0.2.3"
log   = "0.1.9"

[dependencies.sdl2]

# Custom SDL2 until https://github.com/AngryLawyer/rust-sdl2/pull/287
# is merged

git = "https://github.com/simias/rust-sdl2.git"
branch = "audio-fix"
