[package]

name = "gb-rs"
version = "0.3.0"
authors = ["Lionel Flandrin <lionel@svkt.org>"]

keywords = ["emulator", "gameboy"]

readme = "README.md"

description = "GameBoy emulator"

license = "MIT"

[lib]
name = "gbrs_retro"
crate-type = ["dylib"]

[features]

# Select the Super Gameboy bootrom instead of the classic one. It
# doesn't have the scrolling logo and starts up faster. None of the
# SGB-specific features will be handled but that shouldn't cause any
# compatibility issues besides the fact that it will accept to run
# ROMs with invalid headers unlike the original bootrom.
sgb_bootrom = []

[dependencies]

libc = "0.2.3"
num   = "0.1.24"
ascii = "0.5.0"
log   = "0.3.1"
